# Rag--chatboat-mutualfund

./: .env.example  .gitignore  README.md  convert_index.py  debug_out.txt  debug_out2.txt  debug_out3.json  groww_fund_sample.html  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  streamlit_app.py  vercel.json
.streamlit/: config.toml
api/: app.py  index.py
data/embeddings/: .gitkeep  chunks_metadata.json  faiss_index.pkl
data/raw/: .gitkeep  axis-flexi-cap-fund-direct-growth.html  axis-midcap-fund-direct-growth.html  axis-small-cap-fund-direct-growth.html  groww-aggressive-hybrid-fund-direct-growth.html  groww-arbitrage-fund-direct-growth.html  groww-banking-financial-services-fund-direct-growth.html  groww-dynamic-bond-fund-direct-growth.html  groww-elss-tax-saver-fund-direct-growth.html  groww-gold-etf-fof-direct-growth.html  groww-large-cap-fund-direct-growth.html  groww-liquid-fund-direct-growth.html  groww-money-market-fund-direct-growth.html  groww-multicap-fund-direct-growth.html  groww-nifty-200-etf-fof-direct-growth.html  groww-nifty-500-momentum-50-etf-fof-direct-growth.html  groww-nifty-ev-new-age-automotive-etf-fof-direct-growth.html  groww-nifty-india-defence-etf-fof-direct-growth.html  (+17 more)
phase1_scraper/: __init__.py  fund_urls.py  help_scraper.py  scraper.py
phase2_processing/: __init__.py  chunker.py  processor.py
phase3_rag/: __init__.py  embeddings.py  llm_chain.py  retriever.py
phase4_backend/: __init__.py  main.py
phase5_scheduler/: __init__.py  scheduler.py
public/: app.js
tests/: __init__.py  test_rag.py
(+8 files in other folders)
